cabal-version:      2.2
name:               wai-handler-hal
version:            0.1.2.0
synopsis:           Wrap WAI applications to run on AWS Lambda
description:
  This library provides a function 'Network.Wai.Handler.Hal.run' to
  lift a @wai@ 'Network.Wai.Application' into a function that can be
  passed to @hal@'s 'AWS.Lambda.Runtime.mRuntime'. This allows you to
  run applications written in mature web frameworks (e.g., @servant@)
  on AWS Lambda, as proxy integrations of API Gateway Rest APIs.
  .
  More details, including deployment advice, are available in the
  repository's @README.md@.

homepage:           http://github.com/bellroy/wai-handler-hal
bug-reports:        http://github.com/bellroy/wai-handler-hal/issues
license:            BSD-3-Clause
license-file:       LICENSE
author:             Bellroy Tech Team <haskell@bellroy.com>
maintainer:         Bellroy Tech Team <haskell@bellroy.com>
copyright:          Copyright (C) 2021 Bellroy Pty Ltd
category:           AWS, Cloud
build-type:         Simple
extra-source-files:
  CHANGELOG.md
  README.md
  test/data/ProxyRequest.json
  test/golden/WaiRequest.txt
tested-with:
  GHC ==8.6.5 || ==8.8.4 || ==8.10.7 || ==9.0.2 || ==9.2.2

common opts
  default-language: Haskell2010
  ghc-options:
    -Wall -Wcompat -Widentities -Wincomplete-record-updates
    -Wincomplete-uni-patterns -Werror=incomplete-patterns
    -Wredundant-constraints -Wpartial-fields -Wtabs
    -Wmissing-local-signatures -fhelpful-errors
    -fprint-expanded-synonyms -fwarn-unused-do-bind

common deps
  build-depends:
    , base                  >=4.12     && <4.17
    , base64-bytestring     >=1.0.0.0  && <1.3
    , bytestring            >=0.10.8   && <0.12
    , case-insensitive      ^>=1.2.0.0
    , hal                   >=0.4.7    && <0.4.11 || >=1.0.0 && <1.1
    , http-types            ^>=0.12.3
    , network               >=2.8.0.0  && <3.2
    , text                  ^>=1.2.3 || ^>=2.0
    , unordered-containers  ^>=0.2.10.0
    , vault                 ^>=0.3.1.0
    , wai                   ^>=3.2.2

library
  import:          opts, deps
  exposed-modules: Network.Wai.Handler.Hal
  hs-source-dirs:  src

test-suite wai-handler-hal-tests
  import:             deps, opts
  type:               exitcode-stdio-1.0
  hs-source-dirs:     test
  main-is:            Main.hs
  ghc-options:        -threaded
  other-modules:      Network.Wai.Handler.HalTest
  build-tool-depends: tasty-discover:tasty-discover ^>=4.2.2
  build-depends:
    , aeson            ^>=1.5.6.0 || ^>=2.0
    , pretty-simple    ^>=4.1.0.0
    , tasty            >=1.3     && <1.5
    , tasty-golden     ^>=2.3
    , text
    , wai-handler-hal

source-repository head
  type:     git
  location: https://github.com/bellroy/wai-handler-hal.git
